crates/sp-ui/tests/snapshots/golden__command_mode_theme.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
            Links                                                                 
>             github.com                                                         
              docs.rs                                                            
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
  excalith@firefox ❯ theme foo
