crates/sp-ui/tests/snapshots/golden__empty_state_80x24.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
  >                                                                               
  ┌start-page────────────────────────────────────────────────────────────────────┐
> │github.com                                                                    │
  │docs.rs                                                                       │
  │news.ycombinator.com                                                          │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  └──────────────────────────────────────────────────────────────────────────────┘
  3/3 links
