crates/sp-ui/tests/snapshots/golden__filtered_state_narrows_the_list_and_shows_ghost_suggestion.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
            Links                                                                 
>             github.com                                                         
              docs.rs                                                            
              news.ycombinator.com                                               
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
  excalith@firefox ❯ github.com
