crates/sp-ui/tests/snapshots/golden__long_typed_prompt_at_a_narrow_width_still_lays_out.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
  > s some bug                                                                    
  ┌start-page────────────────────────────────────────────────────────────────────┐
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  └──────────────────────────────────────────────────────────────────────────────┘
  0/2 links
