crates/sp-ui/tests/snapshots/golden__selection_moved_forward_with_next.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
  >                                                                               
  ┌start-page────────────────────────────────────────────────────────────────────┐
  │github.com                                                                    │
> │docs.rs                                                                       │
  │news.ycombinator.com                                                          │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  └──────────────────────────────────────────────────────────────────────────────┘
  3/3 links
