crates/sp-ui/tests/snapshots/golden__selection_wraps_backward_past_the_first_link.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
  >                                                                               
  ┌start-page────────────────────────────────────────────────────────────────────┐
  │github.com                                                                    │
  │docs.rs                                                                       │
> │news.ycombinator.com                                                          │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  │                                                                              │
  └──────────────────────────────────────────────────────────────────────────────┘
  3/3 links
