crates/sp-ui/tests/snapshots/golden__selection_wraps_forward_past_the_last_link.snap
---
source: crates/sp-ui/tests/golden.rs
expression: "render_state(&state, 80, 24)"
---
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
            Links                                                                 
>             github.com                                                         
              docs.rs                                                            
              news.ycombinator.com                                               
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
                                                                                  
  excalith@firefox ❯ command...
